Update .gitattributes for Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 pipeline.pkl filter=lfs diff=lfs merge=lfs -text
 *.joblib filter=lfs diff=lfs merge=lfs -text
+calories_app.py filter=lfs diff=lfs merge=lfs -text
