--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ numpy==1.26.4               # Numpy for numerical computations
 matplotlib==3.8.4           # Matplotlib for any plotting 
 seaborn==0.13.2             # Seaborn for enhanced visualizations
 xgboost==1.6.1
+setuptools==65.5.0 
