--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ matplotlib==3.8.4           # Matplotlib for any plotting
 seaborn==0.13.2             # Seaborn for enhanced visualizations
 xgboost==2.1.1
 setuptools==67.7.2 
+plotly==5.24.1
